--- a/webapp/src/main/webapp/css/visualization/personlevel/page.css
+++ b/webapp/src/main/webapp/css/visualization/personlevel/page.css
@@ -75,12 +75,12 @@ p.datatable {
 .author_name,
 .neutral_investigator_name,
 .neutral_author_name {
-    color: #2485AE;
+    color: #12739D;
     font-weight: bold;
 }
 .investigator_moniker,
 .author_moniker {
-    color: #9C9C9C;
+    color: #656565;
 }
 .sub_headings {
     color: #121b3c;
@@ -216,7 +216,7 @@ table.sparkline_wrapper_table td, th {
 }
 #dataPanel .bold {
     font-weight: bold;
-    color: #2485AE;
+    color: #12739D;
     font-size: 14px;
 }
 #dataPanel .investigator_stats .numbers,
@@ -249,7 +249,7 @@ table.sparkline_wrapper_table td, th {
     font-size: .9em;
 }
 #profileTitle {
-    background-color: #2485AE;
+    background-color: #12739D;
     color: white;
     font-weight: bold;
     line-height: 1em !important;
