--- a/webapp/src/main/webapp/css/visualization/visualization.css
+++ b/webapp/src/main/webapp/css/visualization/visualization.css
@@ -40,7 +40,7 @@ span.incomplete-data-holder,
     padding-bottom: 0 !important;
 }
 .collaboratorship-link h3 a {
-    color: #2485AE;
+    color: #12739D;
     font-size: .9em !important;
     text-decoration: underline;
 }
