--- a/webapp/src/main/webapp/themes/tenderfoot/css/edit.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/edit.css
@@ -8,7 +8,7 @@ input[type="password"] {
     font-size: 14px;
     padding: .5em;
     background: #fff;
-    border: 1px solid #e0dfdf;
+    border: 1px solid #898989;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -50,7 +50,7 @@ input.form-button:visited {
     position: relative;
     border: 0;
     margin: 0;
-    /* background-color: #749a02; */
+    /* background-color: #405503; */
     background-color: #3446A0;
     color: #fff;
     font-size: 14px;
@@ -121,7 +121,7 @@ section.accounts input.delete:active {
     top: 1px;
 }
 form textarea {
-    border: 1px solid #e0dfdf;
+    border: 1px solid #898989;
     border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
@@ -138,7 +138,7 @@ form a:visited.cancel,
 a.return:link,
 a.return:visited {
     text-decoration: underline;
-    color: #f70;
+    color: #B50;
     border-color: none;
     padding-left: 3px;
 }
@@ -149,7 +149,7 @@ a.return:visited {
 form a:hover.cancel,
 form a:active.cancel {
     text-decoration: none;
-    color: #f70;
+    color: #B50;
     background: none;
 }
 .validationError {
@@ -168,13 +168,13 @@ p.submit {
     padding: 3px;
 }
 .editingForm .entryFormHead {
-    background-color: #f1f2ee;
+    background-color: #F5F5F5;
     border-color: #dfe6e6;
 }
 .form-item {
     margin-top:.3em;
     background-color: #fff;
-    border-color: #e0dfdf;
+    border-color: #898989;
     font-size: .8em;
     border-width: 1px;
     color: #595B5B;
@@ -183,12 +183,12 @@ p.submit {
 a.return:hover,
 a.return:active {
     text-decoration: none;
-    color: #f70;
+    color: #B50;
     background: none;
 }
 .database_header {
-    background-color: #f1f2ee;
-    color: #2485ae;
+    background-color: #F5F5F5;
+    color: #12739D;
     font-size: 1em;
 }
 .database_upperleftcorner {
@@ -202,7 +202,7 @@ a.return:active {
 }
 .rownumheader,
 .rownum {
-    background-color: #F1F2EE;
+    background-color: #F5F5F5;
     color: #5F6464;
     font-size: 1em;
 }
@@ -293,7 +293,7 @@ form select {
     font-size: 14px;
     padding: .5em;
     background: #fff;
-    border: 1px solid #e0dfdf;
+    border: 1px solid #898989;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -310,7 +310,7 @@ a.ingestMenu:visited,
 a.account-menu:link,
 a.account-menu:visited {
     text-decoration: none;
-    color: #2485AE;
+    color: #12739D;
 }
 a.ingestMenu:hover,
 a.ingestMenu:active,
