--- a/webapp/src/main/webapp/themes/tenderfoot/css/page-individual.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/page-individual.css
@@ -63,7 +63,7 @@ article.property li h3 {
 
 #individual-intro h1 {
     font-size: 1.375em;
-    color: #2485ae;
+    color: #12739D;
     float: left;
 }
 
