--- a/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
@@ -178,7 +178,7 @@ ul#header-nav a.log-out {
 #search-field {
     width: 396px;
     height: 38px;
-    background: url(../images/search-interior-pages.png) 0 0 no-repeat;
+    background: url(../images/search-interior-pages-darkened.png) 0 0 no-repeat;
 }
 #search-field input.search {
     text-decoration: none;
@@ -292,7 +292,7 @@ h2 {
     line-height: 1.5em;
 }
 h2 a {
-    color: #2485ae;
+    color: #12739D;
 }
 h2 a:link,
 h2 a:visited {
