Added lighter shade for secondary color in wilma and added support for hidden inputs

--- a/webapp/src/main/webapp/themes/nemo/css/wilma.css
+++ b/webapp/src/main/webapp/themes/nemo/css/wilma.css
@@ -1350,7 +1350,7 @@ article.property ul.property-list {
 
 /* ADMIN PANEL ------>  */
 #admin {
-    background-color: #f2f9fb;
+    background-color: var(--secondary-color-extralight, #f2f9fb);
 }
 #admin h3 {
     background: #2485AE;
