--- a/webapp/src/main/webapp/themes/wilma/css/wilma.css
+++ b/webapp/src/main/webapp/themes/wilma/css/wilma.css
@@ -1387,7 +1387,7 @@ article.property ul.property-list {
 
 /* ADMIN PANEL ------>  */
 #admin {
-    background-color: #f2f9fb;
+    background-color: var(--secondary-color-extralight, #f2f9fb);
 }
 #admin h3 {
     background: var(--primary-color, #2485ae);
